# canvas-frontend

./: .gitignore  README.md  TODO.md  bmcanvas.json  canvas.css  canvas.html  canvas.js  canvas_demo.html  canvas_test.html  config.json  config2.json  configbm.json  configlean.json  drag.css  drag.html  drag.js  drag2.css  drag2.html  drag2.js  drag3.js  eslint.config.js  index.html  layout.css  layout_full.css  main.d.ts  main.js  network.js  package-lock.json  package.json  preseed.json  print.js  release.sh  simple.html  simple.js  simple2.html  simple2.js  test.html  tsconfig.json  upload.js  util.js  (+1 more)
.claude/: settings.json
backend/: .env.example  README.md  pyproject.toml
backend/src/canvas_ai/: __init__.py
canvas-split/: main.js
conf/: bmcanvas.json  configbm.json  configs.json  configs_full.json  index.html  leancanvas.json  local.json  more.json  preseed.json  productvision.json  quickpreseed.json  simplepreseed.json  swot.json  tows.json
dev/: canvas_test.html  index.html  server.py
doc/: ARCH.md  ARCH_AI.md  DONE.md  PLAN.md
frontend/: eslint.config.js  index.html  package.json
global/: aurora.js  script.js  styles.css
jasmine/: CardSpec.js  InteractSpec.js
lib/: html-to-image.min.js  index.html  purify.es.js
models/: convert_v01_to_v02.py  example.json  future.json  index.html  starthere.json  template.json  test.json
scripts/: release.sh
shared/: README.md
src/: app.ts  context.ts  main.ts  main.tsx
test/: CardSpec.js  InteractSpec.js  LoadSpec.js  bootstrap.test.tsx  card.test.ts  components.test.tsx  formula.test.ts  helpers.ts  (+4 more)
(+70 files in other folders)
