[project]
name = "canvas-ai"
version = "0.0.0"
description = "Backend for the Preseed Canvas — LLM-assisted analysis via FastAPI."
requires-python = ">=3.12"
readme = "README.md"

# Dependencies are intentionally empty until the first substage lands.
# See ../doc/ARCH_AI.md for the full stack.
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/canvas_ai"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
